--- a/style.css
+++ b/style.css
@@ -8,15 +8,27 @@ body {
   font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
   font-size: 18px;
   color: #777;
+  background-image: url("/assets/symphony.png");
 }
 *{
 	box-sizing: border-box;
+}
+.row {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display:         flex;
+  flex-wrap: wrap;
+}
+.row > [class*='col-'] {
+  display: flex;
+  flex-direction: column;
 }
 .col-md-2{
 	max-width: 160px;
 
 }
-.col-md-2:nth child(5){
+.col-md-2:nth-child(5){
 	max-width: 300px;
 }
 header{
@@ -29,6 +41,7 @@ header{
   padding-bottom: 20px;
   font-size: 30px;
   line-height: 49px;
+  width:100%;
   border-bottom: 3px solid #ddd;
 }
 .row{
@@ -57,7 +70,6 @@ nav a{
 	float:left;
 }
 main{
-	background-image: url("/assets/seigaiha/seigaiha.png");
 }
 .mainsection{
 	border:1px solid #ccc;
@@ -69,6 +81,9 @@ main{
 	padding:10px;
 	margin:10px;
 }
+.contact{
+
+}
 footer{
 	width:100%;
 	text-align: center;
@@ -78,3 +93,7 @@ footer{
 	color:white;
 
 }
+
+@grid-columns:              12;
+@grid-gutter-width:         30px;
+@grid-float-breakpoint:     960px;
